--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -5,8 +5,9 @@ on:
       - master
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+    environment: Production
     steps:
 
       - name: Checkout source code
@@ -18,10 +19,11 @@ jobs:
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v19
         with:
+          use_existing_version_if_available: true
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: ${{ secrets.AWS_SECRET_APP_NAME }}
           environment_name: ${{ secrets.AWS_SECRET_ENV_NAME }}
-          version_label: 12345
+          version_label: 1
           region: ${{ secrets.AWS_SECRET_REGION }}
           deployment_package: deploy.zip
