chore: set deploymen configt

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -5,8 +5,9 @@ on:
       - master
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+    environment: Production
     steps:
 
       - name: Checkout source code
