--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -13,17 +13,5 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
-
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v19
-        with:
-          use_existing_version_if_available: true
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: ${{ secrets.AWS_SECRET_APP_NAME }}
-          environment_name: ${{ secrets.AWS_SECRET_ENV_NAME }}
-          version_label: 1
-          region: ${{ secrets.AWS_SECRET_REGION }}
-          deployment_package: deploy.zip
+      - name: Install dependencies
+        run: composer install
