--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,13 +1,13 @@
-name: Deploy master
+name: Deploy
 on:
   push:
     branches:
-      - master
+      - staging
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: Production
+    environment: staging
     steps:
       - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
         with:
