--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -38,4 +38,5 @@ jobs:
           environment_name: ${{ secrets.AWS_SECRET_ENV_NAME }}
           region: ${{ secrets.AWS_SECRET_REGION }}
           version_label: 1
+          use_existing_version_if_available: true
           deployment_package: deploy.zip
