--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Generate deployment package
-        run: zip ../deploy.zip -r * .[^.]*
+        run: zip ../deploy.zip -r * .[^.]* -x "vendor/*"*
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v19
